--- a/.github/workflows/fetch_news.yml
+++ b/.github/workflows/fetch_news.yml
@@ -34,5 +34,5 @@ jobs:
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
         git add data/news.json
-        git commit -m "Update news data" || echo "No changes to commit"
-        git push
+        git diff --exit-code --quiet data/news.json || git commit -m "Update news data"
+        git push origin main
