--- a/.github/workflows/fetch_news.yml
+++ b/.github/workflows/fetch_news.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 * * * *' # Runs every hour
   workflow_dispatch: # Allows manual triggering
 
+permissions:
+  contents: write
+
 jobs:
   fetch-news:
     runs-on: ubuntu-latest
@@ -34,5 +37,4 @@ jobs:
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
         git add data/news.json
-        git diff --exit-code --quiet data/news.json || git commit -m "Update news data"
-        git push origin main
+        git diff --staged --quiet || (git commit -m "Update news data" && git push)
